# nested-menu

./: .gitignore  pyproject.toml
core/: settings.py  urls.py
menu/: admin.py  models.py  urls.py
menu/migrations/: 0001_initial.py
menu/templates/menu/: nested_menu.html
menu/templatetags/: draw_menu.py
